--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
     },
     "require": {
         "php": ">=7.0",
-        "symfony/validator": "^3.3",
-        "symfony/options-resolver": "^3.3"
+        "symfony/validator": "^3.3|^4.0",
+        "symfony/options-resolver": "^3.3|^4.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.2"
